--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsonapi-serializer-lite",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Lightweight JSON API serializer",
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/fabriciotav/jsonapi-serializer-lite",
   "dependencies": {
-    "lodash": "4.2.1"
+    "lodash": "4.2.1",
+    "object-key": "0.1.0"
   },
   "devDependencies": {
     "mocha": "2.4.5"
